Calculate cursor position relative to top-left corner of current screen

QCursor::pos() returns an absolute position of cursor,
which is incorrect unless the screen's top-left corner is (0, 0).
This is used when calculating position of the icon created on
desktop.

BUG: 436216